Update Soundcloud job and Ping Pong Finder

--- a/index.html
+++ b/index.html
@@ -30,9 +30,9 @@
 				<!-- Header -->
 					<header id="header">
 						<h1>Matias Villaverde</h1>
-						<p>Programmer</a></p>
+						<p>iOS Engineer at Soundcloud</a></p>
 						<p><a href="https://itunes.apple.com/de/app/looping-dein-familienkalender/id1003205988?mt=8">Looping</a> &nbsp;&bull;&nbsp;
-							<a href="https://itunes.apple.com/us/app/catch-me-if-you-trump!/id1175751766?mt=8">Catch me if you Trump</a> &nbsp;&bull;&nbsp;
+							<a href="https://itunes.apple.com/us/app/ping-pong-table-finder/id1450167915?ls=1&mt=8">Ping Pong Finder</a> &nbsp;&bull;&nbsp;
 							<a href="https://itunes.apple.com/de/app/photoautomat-find-vintage-photo-booth/id1178661623?l=en&mt=8">Photoautomat</a> </p>
 						<nav>
 							<ul>
